# TareaCorta3

./: CMakeLists.txt
archivos/: Clientes.txt  indice.txt
cpp/: ABB.cpp  Busqueda.cpp  LecturaArchivos.cpp  MemoriaCache.cpp  Operador.cpp  main.cpp
hearder/: ABB.h  Busqueda.h  LecturaArchivos.h  MemoriaCache.h  Operador.h  phc.h
